--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,20 @@
-server {
-    listen 80;
+    server {
+        listen 80;
 
-    location / {
-        proxy_pass http://web:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        # Esta es la línea mágica. Le dice a Nginx que use el resolvedor
+        # de DNS interno de Docker para encontrar otros contenedores.
+        resolver 127.0.0.11 valid=30s;
+
+        location / {
+            # Guardamos la dirección de nuestra aplicación en una variable
+            # para forzar a Nginx a usar el 'resolver' que definimos arriba.
+            set $upstream_bytchat http://web:8000;
+            proxy_pass $upstream_bytchat;
+
+            # El resto de las cabeceras para que la comunicación sea correcta.
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
-}
