feat(frontend): Implementar flujo de autenticación y layout base

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,20 +1,35 @@
-    server {
-        listen 80;
+server {
+    listen 80;
 
-        # Esta es la línea mágica. Le dice a Nginx que use el resolvedor
-        # de DNS interno de Docker para encontrar otros contenedores.
-        resolver 127.0.0.11 valid=30s;
+    # Esta es la línea mágica. Le dice a Nginx que use el resolvedor
+    # de DNS interno de Docker para encontrar otros contenedores.
+    resolver 127.0.0.11 valid=30s;
+    set $upstream_bytchat http://web:8000;
 
-        location / {
-            # Guardamos la dirección de nuestra aplicación en una variable
-            # para forzar a Nginx a usar el 'resolver' que definimos arriba.
-            set $upstream_bytchat http://web:8000;
-            proxy_pass $upstream_bytchat;
-
-            # El resto de las cabeceras para que la comunicación sea correcta.
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+    # Manejo de CORS para la ruta de autenticación
+    location /token {
+        # Añade la cabecera para permitir el origen de tu frontend
+        add_header 'Access-Control-Allow-Origin' 'http://161.132.45.210:5173' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        
+        # Si la petición es OPTIONS (preflight de CORS), devuelve 204
+        if ($request_method = 'OPTIONS') {
+            return 204;
         }
+
+        proxy_pass $upstream_bytchat;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    location / {
+        proxy_pass $upstream_bytchat;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
