feat: punto de guardado antes de implementar sistema de métricas y analíticas

--- a/bots_config.json
+++ b/bots_config.json
@@ -1,39 +1,51 @@
 {
   "bytcode_main_bot": {
     "bot_name": "Asistente Principal de Bytcode",
-    "active_models": {
-      "simple": {
-        "connector": "google",
-        "model_id": "gemini-1.5-pro"
+    "model_configs": [
+      {
+        "task_type": "simple",
+        "provider": "google",
+        "model_id": "gemini-1.5-pro",
+        "is_active": true
       },
-      "complex": {
-        "connector": "openai",
-        "model_id": "gpt-4o"
+      {
+        "task_type": "complex",
+        "provider": "openai",
+        "model_id": "gpt-4o",
+        "is_active": true
       },
-      "code": {
-        "connector": "deepseek",
-        "model_id": "deepseek-chat"
+      {
+        "task_type": "code",
+        "provider": "deepseek",
+        "model_id": "deepseek-chat",
+        "is_active": true
       }
-    },
+    ],
     "rag_index_path": "data/vector_db/bytcode_index.faiss",
     "rag_map_path": "data/vector_db/chunks_map.json"
   },
   "cliente_demo_lite": {
     "bot_name": "Bot de Demostración (Bajo Costo)",
-    "active_models": {
-      "simple": {
-        "connector": "deepseek",
-        "model_id": "deepseek-chat"
+    "model_configs": [
+      {
+        "task_type": "simple",
+        "provider": "deepseek",
+        "model_id": "deepseek-chat",
+        "is_active": true
       },
-      "complex": {
-        "connector": "deepseek",
-        "model_id": "deepseek-chat"
+      {
+        "task_type": "complex",
+        "provider": "deepseek",
+        "model_id": "deepseek-chat",
+        "is_active": true
       },
-      "code": {
-        "connector": "deepseek",
-        "model_id": "deepseek-chat"
+      {
+        "task_type": "code",
+        "provider": "deepseek",
+        "model_id": "deepseek-chat",
+        "is_active": true
       }
-    },
+    ],
     "rag_index_path": "data/vector_db/cliente_demo_index.faiss",
     "rag_map_path": "data/vector_db/cliente_demo_map.json"
   }
