--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,29 +1,18 @@
 server {
     listen 80;
+    server_name 161.132.45.210;
+    return 301 https://$host$request_uri;
+}
 
-    # Esta es la línea mágica. Le dice a Nginx que use el resolvedor
-    # de DNS interno de Docker para encontrar otros contenedores.
+server {
+    listen 443 ssl;
+    server_name 161.132.45.210;
+
+    ssl_certificate /etc/ssl/certs/bytchat-selfsigned.crt;
+    ssl_certificate_key /etc/ssl/private/bytchat-selfsigned.key;
+
     resolver 127.0.0.11 valid=30s;
     set $upstream_bytchat http://web:8000;
-
-    # Manejo de CORS para la ruta de autenticación
-    location /token {
-        # Añade la cabecera para permitir el origen de tu frontend
-        add_header 'Access-Control-Allow-Origin' 'http://161.132.45.210:5173' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-        
-        # Si la petición es OPTIONS (preflight de CORS), devuelve 204
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
-
-        proxy_pass $upstream_bytchat;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
 
     location / {
         proxy_pass $upstream_bytchat;
@@ -31,5 +20,10 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /static/ {
+        alias /app/static/;
+        autoindex on;
     }
 }
