💾 CHECKPOINT: Sistema completo antes de integración Braintree
✅ Estado actual (sin secretos expuestos):
- Sistema BytTokens funcionando 100%
- BillingPage.tsx con UI completa (mock data)
- CulqiService preparado pero no integrado
- Endpoints de planes funcionales
- Base de datos con UserPlan, TokenUsage, BillingRecord
- Frontend React con componentes UI listos
- API keys movidas a variables de entorno

🎯 Listo para integrar Braintree para pagos reales

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,12 @@
 server {
     listen 80;
-    server_name 161.132.45.210;
+    server_name bytcode.tech www.bytcode.tech 161.132.45.210;
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name 161.132.45.210;
+    server_name bytcode.tech www.bytcode.tech 161.132.45.210;
 
     ssl_certificate /etc/ssl/certs/bytchat-selfsigned.crt;
     ssl_certificate_key /etc/ssl/private/bytchat-selfsigned.key;
@@ -24,6 +24,18 @@ server {
 
     location /static/ {
         alias /app/static/;
-        autoindex on;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+        add_header Access-Control-Allow-Origin "*";
+        add_header Access-Control-Allow-Methods "GET, OPTIONS";
+        add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range";
     }
+
+    # Ruta para el archivo de prueba del widget
+    location /test-widget {
+        alias /var/www/test-widget.html;
+        add_header Content-Type text/html;
+    }
+
+    # Proxy para la API de FastAPI
 }
